# mEdit

./: .clang-format  .gitignore  CMakeLists.txt  Config.tmpl  RCa18296  README.md  mEdit-tmpl.rc  mEdit.rc  resource.h
.github/workflows/: cmake-multi-platform.yml
Include/: Cache.h  EditorApplication.h  EditorSettings.h  FileDialog.hpp  Hacks.hpp  Ini.hpp  json.hpp
Include/Data/: ItemsDatabase.h  TextDatabase.h
Include/Editors/: SceneEditor.h  ScriptEditor.h  TextEditor.h
Include/Game/: Actor.h  Enums.h
Include/Game/Actors/: Car.h  Detector.h  Door.h  Enemy.h  PedManager.h  Physical.h  Player.h  Railway.h  TrafficManager.h
Include/IO/: BinaryReader.hpp  BinaryWriter.hpp  Chunk.h  ChunkReader.hpp  ChunkWriter.hpp  FileSystem.h  MemoryStream.hpp
Include/Utils/: ImGuiUtils.h  MathUtils.h  WinUtils.h
Source/: Cache.cpp  EditorApplication.cpp  Main.cpp
Source/Data/: ItemsDatabase.cpp  TextDatabase.cpp
Source/Editors/: SceneEditor.cpp  TextEditor.cpp
Source/IO/: FileSystem.cpp
Vendors/ImGui/: imgui.cpp  imgui.h  imgui_impl_dinput.cpp  imgui_impl_dinput.h  imgui_impl_dx8.cpp  imgui_impl_dx8.h  imgui_stdlib.cpp  imgui_stdlib.h
Vendors/LS3D/Include/: C_list.h  C_str.hpp  C_unknwn.hpp  IBManager.h  LS3D.h  Memory.h  Utils.h  VBManager.h  common.h  rw_data.h
Vendors/LS3D/Include/I3D/: C_I3D_cache.h  I3D_animation_set.h  I3D_area.h  I3D_camera.h  I3D_driver.h  I3D_dummy.h  I3D_emitor.h  I3D_frame.h  I3D_joint.h  I3D_landscape.h  I3D_light.h  I3D_material.h  I3D_math.h  I3D_mesh_object.h  I3D_model.h  I3D_occluder.h  I3D_scene.h  I3D_sector.h  I3D_shadow.h  I3D_sound.h  I3D_target.h  I3D_user.h  I3D_visual.h  I3D_volume.h
Vendors/LS3D/Include/I3D/Visuals/: I3D_billboard.h  I3D_land_patch.h  I3D_lensflare.h  I3D_lit_object.h  I3D_mirror.h  I3D_morph.h  I3D_object.h  I3D_part_element.h  I3D_part_element_base.h  I3D_projector.h  I3D_singlemesh.h  I3D_singlemorph.h
Vendors/LS3D/Include/IGraph/: IGraph.h  IShow.h  ITexture.h
Vendors/LS3D/Include/ISND/: ISND_3Dlistener.h  ISND_3Dsound.h  ISND_driver.h  ISND_sound.h  ISND_source.h  ISound.h  dsound_utils.h
Vendors/LS3D/Lib/: LS3DF.lib  rw_data.lib
Vendors/Lodepng/: lodepng.h
Vendors/MinHook/: CMakeLists.txt  buffer.cpp  buffer.h  hook.cpp  trampoline.cpp  trampoline.h
